--- a/index.html
+++ b/index.html
@@ -1,79 +1,93 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Luna Domus – Affitti Brevi Verona</title>
-  <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
-  <header>
-    <img src="logo.png" alt="Luna Domus Logo" class="logo" />
-    <nav>
-      <a href="#servizi">Servizi</a>
-      <a href="#perche">Perché Noi</a>
-      <a href="#contatti">Contatti</a>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Luna Domus – Property Management</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="bg-gray-50 text-gray-800">
+    <header class="bg-[#0c223d] text-white px-6 py-4 flex items-center justify-between">
+      <img src="logo.png" alt="Luna Domus Logo" class="h-10" />
+      <nav class="space-x-4 text-sm">
+        <a href="#vantaggi" class="hover:underline">Vantaggi</a>
+        <a href="#come" class="hover:underline">Come Funziona</a>
+        <a href="#servizi" class="hover:underline">Servizi</a>
+        <a href="#contatti" class="hover:underline">Contatti</a>
+      </nav>
+    </header>
 
-  <main>
-    <section class="hero">
-      <h1>Gestione Affitti Brevi a Verona</h1>
-      <p>Hai una casa a Verona e poco tempo per gestirla? Ci occupiamo di tutto. Tu incassi. Noi lavoriamo.</p>
-      <a href="#contatti" class="btn">Inizia ora</a>
+    <section class="text-center py-16 px-6 bg-gray-100">
+      <h1 class="text-3xl md:text-4xl font-semibold mb-4">Affitta senza pensieri. Pensiamo a tutto noi.</h1>
+      <p class="text-lg md:text-xl mb-6">Gestione affitti brevi per chi ha già un lavoro e vuole solo vedere i risultati.</p>
+      <a href="#contatti" class="inline-block bg-[#0c223d] text-white px-6 py-3 rounded hover:bg-[#173457]">Richiedi una valutazione gratuita</a>
     </section>
 
-    <section id="perche">
-      <h2>Perché scegliere Luna Domus</h2>
-      <ul>
-        <li>Servizio sartoriale, non siamo un'agenzia</li>
-        <li>Gestione completa: pulizie, prezzi, ospiti</li>
-        <li>Massimizziamo i profitti, zero stress</li>
-        <li>Comunicazione in italiano, inglese, spagnolo</li>
+    <section id="vantaggi" class="py-12 px-6 max-w-5xl mx-auto">
+      <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-8">Perché scegliere Luna Domus</h2>
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="bg-white p-6 rounded shadow">
+          <h3 class="font-semibold mb-2">✅ Guadagni massimizzati</h3>
+          <p>Ottimizziamo i prezzi ogni giorno. Meno turnover, più profitti netti.</p>
+        </div>
+        <div class="bg-white p-6 rounded shadow">
+          <h3 class="font-semibold mb-2">⏱️ Nessuna perdita di tempo</h3>
+          <p>Ospiti, pulizie, manutenzione, comunicazione: gestiamo tutto noi.</p>
+        </div>
+        <div class="bg-white p-6 rounded shadow">
+          <h3 class="font-semibold mb-2">🤝 Servizio sartoriale</h3>
+          <p>Ogni appartamento ha una strategia personalizzata. Nessun approccio standard.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="come" class="py-12 px-6 max-w-3xl mx-auto">
+      <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-6">Come funziona</h2>
+      <ol class="space-y-4 text-lg list-decimal list-inside">
+        <li>Ti contattiamo e ascoltiamo le tue esigenze</li>
+        <li>Valutiamo la proprietà e prepariamo la strategia</li>
+        <li>Iniziamo a gestire tutto. Tu incassi, noi lavoriamo</li>
+      </ol>
+    </section>
+
+    <section id="servizi" class="py-12 px-6 max-w-5xl mx-auto">
+      <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-6">Servizi offerti</h2>
+      <ul class="grid md:grid-cols-2 gap-4 text-base list-disc list-inside">
+        <li>Inserzione e gestione Airbnb</li>
+        <li>Prezzi dinamici e revenue manuale</li>
+        <li>Check-in in presenza o self check-in</li>
+        <li>Comunicazione con gli ospiti in 3 lingue</li>
+        <li>Pulizie, lavanderia e supporto manutenzione</li>
+        <li>Report mensili e aggiornamenti regolari</li>
       </ul>
     </section>
 
-    <section id="servizi">
-      <h2>Servizi Offerti</h2>
-      <ul>
-        <li>Inserzione professionale su Airbnb</li>
-        <li>Ottimizzazione prezzi e visibilità</li>
-        <li>Gestione ospiti, check-in/check-out</li>
-        <li>Pulizie e manutenzione</li>
-        <li>Report mensili con dati chiari</li>
-      </ul>
-    </section>
-
-    <section id="contatti">
-      <h2>Contatti</h2>
-      <p>Email: <a href="mailto:lunadomus1@gmail.com">lunadomus1@gmail.com</a></p>
-      <p>Telefono: <a href="tel:+393771359441">+39 377 1359441</a></p>
-      <p>Instagram: <a href="https://www.instagram.com/lunadomusverona" target="_blank">@lunadomusverona</a></p>
-
-      <form action="mailto:lunadomus1@gmail.com" method="post" enctype="text/plain">
-        <label for="nome">Nome:</label><br />
-        <input type="text" id="nome" name="nome" required /><br />
-
-        <label for="email">Email:</label><br />
-        <input type="email" id="email" name="email" required /><br />
-
-        <label for="proprieta">Descrivi la tua proprietà:</label><br />
-        <textarea id="proprieta" name="proprieta" rows="4"></textarea><br />
-
-        <label for="preferenza">Come preferisci essere contattato?</label><br />
-        <select id="preferenza" name="preferenza">
-          <option value="email">Email</option>
-          <option value="telefono">Telefono</option>
-        </select><br />
-
-        <input type="submit" value="Invia" class="btn" />
+    <section id="contatti" class="py-12 px-6 max-w-2xl mx-auto">
+      <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-6">Contattami</h2>
+      <form action="mailto:lunadomus1@gmail.com" method="post" enctype="text/plain" class="bg-white p-6 rounded shadow space-y-4">
+        <div>
+          <label for="nome" class="block mb-1">Nome</label>
+          <input type="text" id="nome" name="nome" required class="w-full border rounded px-3 py-2">
+        </div>
+        <div>
+          <label for="email" class="block mb-1">Email</label>
+          <input type="email" id="email" name="email" required class="w-full border rounded px-3 py-2">
+        </div>
+        <div>
+          <label for="messaggio" class="block mb-1">Messaggio</label>
+          <textarea id="messaggio" name="messaggio" rows="4" class="w-full border rounded px-3 py-2"></textarea>
+        </div>
+        <button type="submit" class="bg-[#0c223d] text-white px-5 py-2 rounded hover:bg-[#173457]">Invia richiesta</button>
       </form>
+      <div class="mt-6 text-center text-sm">
+        <p>Email: <a href="mailto:lunadomus1@gmail.com" class="text-blue-600">lunadomus1@gmail.com</a></p>
+        <p>Telefono: <a href="tel:+393771359441" class="text-blue-600">+39 377 1359441</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/lunadomusverona" target="_blank" class="text-blue-600">@lunadomusverona</a></p>
+      </div>
     </section>
-  </main>
 
-  <footer>
-    <p>Toma Dennis – Property Manager</p>
-    <p>&copy; 2025 Luna Domus</p>
-  </footer>
-</body>
+    <footer class="bg-[#0c223d] text-white text-center text-sm py-4">
+      <p>Toma Dennis – Property Manager | &copy; 2025 Luna Domus</p>
+    </footer>
+  </body>
 </html>
