--- a/index.html
+++ b/index.html
@@ -3,40 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Luna Domus – Property Management</title>
+    <title>Luna Domus – Gestione Affitti Verona</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-50 text-gray-800">
     <header class="bg-[#0c223d] text-white px-6 py-4 flex items-center justify-between">
       <img src="logo.png" alt="Luna Domus Logo" class="h-10" />
       <nav class="space-x-4 text-sm">
-        <a href="#vantaggi" class="hover:underline">Vantaggi</a>
+        <a href="#vantaggi" class="hover:underline">Perché Luna Domus</a>
         <a href="#come" class="hover:underline">Come Funziona</a>
-        <a href="#servizi" class="hover:underline">Servizi</a>
+        <a href="#socialproof" class="hover:underline">Numeri</a>
         <a href="#contatti" class="hover:underline">Contatti</a>
       </nav>
     </header>
 
     <section class="text-center py-16 px-6 bg-gray-100">
-      <h1 class="text-3xl md:text-4xl font-semibold mb-4">Affitta senza pensieri. Pensiamo a tutto noi.</h1>
-      <p class="text-lg md:text-xl mb-6">Gestione affitti brevi per chi ha già un lavoro e vuole solo vedere i risultati.</p>
-      <a href="#contatti" class="inline-block bg-[#0c223d] text-white px-6 py-3 rounded hover:bg-[#173457]">Richiedi una valutazione gratuita</a>
+      <h1 class="text-3xl md:text-4xl font-semibold mb-4">Gestione completa del tuo appartamento a Verona</h1>
+      <p class="text-lg md:text-xl mb-6">Tu ti rilassi. Io faccio il resto.</p>
+      <a href="#contatti" class="inline-block bg-[#0c223d] text-white px-6 py-3 rounded hover:bg-[#173457]">Valutazione gratuita</a>
     </section>
 
     <section id="vantaggi" class="py-12 px-6 max-w-5xl mx-auto">
       <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-8">Perché scegliere Luna Domus</h2>
       <div class="grid md:grid-cols-3 gap-6">
         <div class="bg-white p-6 rounded shadow">
-          <h3 class="font-semibold mb-2">✅ Guadagni massimizzati</h3>
-          <p>Ottimizziamo i prezzi ogni giorno. Meno turnover, più profitti netti.</p>
+          <h3 class="font-semibold mb-2">🙋 Servizio personale</h3>
+          <p>Mi occupo io della tua casa, non sei un numero in un’agenzia.</p>
         </div>
         <div class="bg-white p-6 rounded shadow">
-          <h3 class="font-semibold mb-2">⏱️ Nessuna perdita di tempo</h3>
-          <p>Ospiti, pulizie, manutenzione, comunicazione: gestiamo tutto noi.</p>
+          <h3 class="font-semibold mb-2">📈 Guadagni costanti</h3>
+          <p>Massimizzo gli incassi e riduco i vuoti. Prezzi dinamici gestiti a mano.</p>
         </div>
         <div class="bg-white p-6 rounded shadow">
-          <h3 class="font-semibold mb-2">🤝 Servizio sartoriale</h3>
-          <p>Ogni appartamento ha una strategia personalizzata. Nessun approccio standard.</p>
+          <h3 class="font-semibold mb-2">🛠️ Zero sbatti</h3>
+          <p>Dimentica ospiti, pulizie, problemi. Tu incassi, io gestisco tutto.</p>
         </div>
       </div>
     </section>
@@ -44,26 +44,37 @@
     <section id="come" class="py-12 px-6 max-w-3xl mx-auto">
       <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-6">Come funziona</h2>
       <ol class="space-y-4 text-lg list-decimal list-inside">
-        <li>Ti contattiamo e ascoltiamo le tue esigenze</li>
-        <li>Valutiamo la proprietà e prepariamo la strategia</li>
-        <li>Iniziamo a gestire tutto. Tu incassi, noi lavoriamo</li>
+        <li>Ci sentiamo e capisco com'è fatto il tuo appartamento</li>
+        <li>Ti do una stima realistica di quanto potresti incassare ogni mese</li>
+        <li>Se ti va, iniziamo. Io gestisco tutto, tu ricevi i bonifici</li>
       </ol>
     </section>
 
-    <section id="servizi" class="py-12 px-6 max-w-5xl mx-auto">
-      <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-6">Servizi offerti</h2>
-      <ul class="grid md:grid-cols-2 gap-4 text-base list-disc list-inside">
-        <li>Inserzione e gestione Airbnb</li>
-        <li>Prezzi dinamici e revenue manuale</li>
-        <li>Check-in in presenza o self check-in</li>
-        <li>Comunicazione con gli ospiti in 3 lingue</li>
-        <li>Pulizie, lavanderia e supporto manutenzione</li>
-        <li>Report mensili e aggiornamenti regolari</li>
-      </ul>
+    <section id="socialproof" class="py-12 px-6 max-w-4xl mx-auto">
+      <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-6">Numeri chiari, niente fumo</h2>
+      <div class="grid md:grid-cols-2 gap-6">
+        <div class="bg-white p-6 rounded shadow text-center">
+          <p class="text-4xl font-bold text-[#0c223d]">3</p>
+          <p>Proprietà attive a Verona</p>
+        </div>
+        <div class="bg-white p-6 rounded shadow text-center">
+          <p class="text-4xl font-bold text-[#0c223d]">60+</p>
+          <p>Prenotazioni completate nel 2024</p>
+        </div>
+      </div>
+      <div class="mt-8 text-center">
+        <span class="inline-block bg-green-600 text-white px-4 py-1 rounded text-sm font-semibold">Superhost (in arrivo)</span>
+        <span class="inline-block bg-gray-800 text-white px-4 py-1 rounded text-sm font-semibold ml-2">Gestione personale, no agenzia</span>
+      </div>
+      <div class="mt-8 text-sm italic text-center">
+        <p>“Mi sono affidato a Luna Domus dopo un’esperienza negativa con un’agenzia. Ora non mi occupo più di nulla e incasso ogni mese.”</p>
+        <p class="mt-2">– Testimonianza placeholder</p>
+      </div>
     </section>
 
     <section id="contatti" class="py-12 px-6 max-w-2xl mx-auto">
-      <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-6">Contattami</h2>
+      <h2 class="text-2xl font-semibold text-center text-[#0c223d] mb-6">Parliamone senza impegno</h2>
+      <p class="text-center mb-4">Scrivimi. Ti rispondo in giornata e ti dico quanto potresti incassare ogni mese con il tuo appartamento.</p>
       <form action="mailto:lunadomus1@gmail.com" method="post" enctype="text/plain" class="bg-white p-6 rounded shadow space-y-4">
         <div>
           <label for="nome" class="block mb-1">Nome</label>
@@ -74,8 +85,12 @@
           <input type="email" id="email" name="email" required class="w-full border rounded px-3 py-2">
         </div>
         <div>
+          <label for="telefono" class="block mb-1">Telefono</label>
+          <input type="text" id="telefono" name="telefono" class="w-full border rounded px-3 py-2">
+        </div>
+        <div>
           <label for="messaggio" class="block mb-1">Messaggio</label>
-          <textarea id="messaggio" name="messaggio" rows="4" class="w-full border rounded px-3 py-2"></textarea>
+          <textarea id="messaggio" name="messaggio" rows="4" placeholder="Che tipo di appartamento hai?" class="w-full border rounded px-3 py-2"></textarea>
         </div>
         <button type="submit" class="bg-[#0c223d] text-white px-5 py-2 rounded hover:bg-[#173457]">Invia richiesta</button>
       </form>
