--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <img src="logo.png" alt="Luna Domus Logo" class="h-16 mb-6" />
 
       <h1 class="text-3xl md:text-4xl font-bold max-w-2xl mb-4 leading-tight">
-        Hai una casa a Verona vuota? Ti dico quanto puoi incassare ogni mese.
+        Hai un appartamento a Verona che non stai sfruttando?
       </h1>
 
       <p class="text-lg md:text-xl max-w-xl mb-8">
-        Niente agenzie, niente sbatti. Gestione personale, rispetto per la tua casa. Occupazione media del 90%.
+        Mi occupo personalmente di ogni casa. Nessuna agenzia, nessuna delega. Gestione completa per chi vuole guadagnare senza perderci tempo.
       </p>
 
       <form action="mailto:lunadomus1@gmail.com" method="post" enctype="text/plain" class="w-full max-w-md bg-gray-100 p-6 rounded shadow space-y-4">
@@ -28,17 +28,21 @@
           <input type="text" id="telefono" name="telefono" required class="w-full border border-gray-300 rounded px-3 py-2">
         </div>
         <button type="submit" class="w-full bg-[#0c223d] text-white py-2 rounded font-semibold hover:bg-[#173457]">
-          Mandami la stima gratuita
+          Contattami senza impegno
         </button>
       </form>
 
-      <p class="mt-8 text-sm text-gray-500 max-w-sm">
-        Gestione affitti brevi solo su Verona. Ogni casa è seguita direttamente da Dennis, property manager. Nessuna delega a terzi.
+      <p class="mt-6 text-sm text-gray-600 max-w-sm">
+        Appena ricevo il tuo numero, ti richiamo il prima possibile dal <strong>+39 377 1359441</strong>. Nessun call center, nessun modulo automatico: ti parlo io, Dennis.
+      </p>
+
+      <p class="mt-8 text-xs text-gray-400 max-w-sm">
+        Toma Dennis – Property Manager a Verona. Rispetto per la tua casa prima di tutto.
       </p>
     </section>
 
     <footer class="text-center text-sm text-gray-400 py-4">
-      <p>&copy; 2025 Luna Domus – Toma Dennis</p>
+      <p>&copy; 2025 Luna Domus</p>
     </footer>
   </body>
 </html>
