--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <img src="logo.png" alt="Luna Domus Logo" class="h-16 mb-6" />
 
       <h1 class="text-3xl md:text-4xl font-bold max-w-2xl mb-4 leading-tight">
-        Hai un appartamento a Verona che non stai sfruttando?
+        Hai un appartamento a Verona che non ti rende nulla?
       </h1>
 
       <p class="text-lg md:text-xl max-w-xl mb-8">
-        Mi occupo personalmente di ogni casa. Nessuna agenzia, nessuna delega. Gestione completa per chi vuole guadagnare senza perderci tempo.
+        Non sono un'agenzia. Mi occupo personalmente degli immobili che gestisco, uno a uno. Nessuna delega, nessun automatismo. Solo lavoro fatto bene, con metodo, trasparenza e rispetto per la tua casa.
       </p>
 
       <form action="mailto:lunadomus1@gmail.com" method="post" enctype="text/plain" class="w-full max-w-md bg-gray-100 p-6 rounded shadow space-y-4">
@@ -33,16 +33,17 @@
       </form>
 
       <p class="mt-6 text-sm text-gray-600 max-w-sm">
-        Appena ricevo il tuo numero, ti richiamo il prima possibile dal <strong>+39 377 1359441</strong>. Nessun call center, nessun modulo automatico: ti parlo io, Dennis.
+        Ricevo il numero e ti richiamo io, Dennis, il prima possibile dal <strong>+39 377 1359441</strong>. Nessun call center. Parli direttamente con chi potrebbe iniziare a farti guadagnare da casa tua, senza complicazioni.
       </p>
 
-      <p class="mt-8 text-xs text-gray-400 max-w-sm">
-        Toma Dennis – Property Manager a Verona. Rispetto per la tua casa prima di tutto.
+      <p class="mt-8 text-xs text-gray-500 max-w-sm italic">
+        Luna Domus Verona – mentre tu dormi, il tuo appartamento lavora. Chi mi contatta oggi, inizia a incassare prima.
       </p>
     </section>
 
     <footer class="text-center text-sm text-gray-400 py-4">
-      <p>&copy; 2025 Luna Domus</p>
+      <p>&copy; 2025 Luna Domus – Toma Dennis</p>
+      <p>Partita IVA: 05120920235</p>
     </footer>
   </body>
 </html>
